revision: build-happy-path

--- a/demos/hacbs-probe-payload/components/hacbs-probe-payload.yaml
+++ b/demos/hacbs-probe-payload/components/hacbs-probe-payload.yaml
@@ -10,5 +10,5 @@ spec:
   source:
     git:
       url: https://github.com/ralphbean/hacbs-probe-payload
-      branch: build-happy-path
+      revision: build-happy-path 
  
